Bis Peru - Freiwilligendienst weiterkommen

--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
   <div class="container achterspaltenlayout">
-    <div class="text-center"> <h2> {{ entry.zusatzfeld1 }} </h2> </div>
+    <div class="text-center"> <h2 style="padding-bottom: 2rem;"> {{ entry.zusatzfeld1 }} </h2> </div>
       <div id="copy">    {{ entry.zusatzfeld3 }}  </div>
     <div class="row">
       <div class="col-sm-6">
