--- a/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
+++ b/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
@@ -10,12 +10,11 @@
 {% block block1 %}
 
 <style>
-.stylevorgaben2 hr {
-  margin-top: -1rem;
-  margin-bottom: 0;
+ hr {
+  border-width: 2px;
 }
 
-.stylevorgaben2 h2 {
+ h2 {
   padding-bottom: .5rem;
 }
 </style>
@@ -32,15 +31,13 @@
 <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 <div class="container achterspaltenlayout" style="position: relative;">
-  <div style="padding-bottom:3rem;">
     {% set entry = craft.entries.section('fuerSie').slug('informationen').one() %}
     <h1 style="padding-bottom: 2rem;"> {{ entry.title }}   </h1>
     <div id="anleser"> {{ entry.anleser }} </div>
-    </div>
   </div>
 </div>
 
-<div class="container-fluid no-padding style" style="background-color: white; padding-bottom: 4rem;">
+<div class="container-fluid no-padding style" style="background-color: white; padding-bottom: 5rem; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout" id="copy">
     <div class="row">
@@ -53,11 +50,11 @@
     </div>
   </div>
 
-  <div class="container achterspaltenlayout" id="copy">
+  <div class="container achterspaltenlayout" id="copy" style="padding-bottom: 4rem;">
     {{ entry.zusatzfeld2 }}
   </div>
 
-<div class="container achterspaltenlayout">
+<div class="container achterspaltenlayout" style="padding-bottom: 4rem;">
   {% set entry = craft.entries.section('fuerSie').slug('gemeinden').one() %}
   <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}</div>
   <div id="copy"> {{ entry.zusatzfeld1 }}  </div>
@@ -69,24 +66,14 @@
 </div>
 
 
-  <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
-    <hr style="height: 2px; margin-top: 1.5rem;"> <br>
-  <p id="anleser" class="text-center"> Erfahre, wie du vor Ort helfen kannst  </p>
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+    <hr style="margin-top: 2rem; border-width: 1px;"> <br>
+  <p id="anleser" class="text-center" style="padding-top: 2rem; padding-bottom: 3rem;"> Erfahre, wie du vor Ort helfen kannst  </p>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('freiwilligendienst').one() %}
 
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
-  <div class="row">
-    <div class="col-md-4" style="padding: 0;">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.anleser }}</div>
-    </div>
-  </div>
-</div> <!-- Weitere Informationen zum Konzept -->
+  {% include '_layouts/weiterleitungkorrekt' %}
 
 </div>
 {% endblock %}
