--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
@@ -31,22 +31,20 @@
   <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;" id="profil">
     {% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
 
-    <div style="padding-bottom:3rem; ">
       <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
       <div id="anleser"> {{ entry.anleser }}</div>
-      </div>
     </div>
   </div>
 
 <div class="container-fluid no-padding" style="background-color: #ffffff;">
 
-  <div class="container achterspaltenlayout" style="padding-bottom: 0;">
-    <div class="text-center"> <h2> {{ entry.zusatzfeld1 }} </h2> </div>
+  <div class="container achterspaltenlayout" style="padding-bottom: 0; padding-top: 3rem;">
+    <h2 class="text-center" style="padding-bottom: .5rem;"> {{ entry.zusatzfeld1 }} </h2>
     <div id="copy"> {{ entry.text}}</div>
 
   {% set entries = craft.entries.section('fuerSie').slug('1-joh-3-16-ff').one().children().all() %}
   {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
-  <div id="accordion">
+  <div id="accordion" style="padding-top: 2rem; padding-bottom: 1.5rem;">
     {% set counter = 0 %}
     {% for entry in entries %} {% set counter = counter + 1 %}
     <div class="card" style="border-radius: 0; border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
@@ -73,7 +71,7 @@
   </div> <!-- Dein Profil -->
 
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-bottom: 4rem;">
       <div id="copy"> {{ entry.zusatzfeld2 }} </div>
   </div>
 
@@ -87,13 +85,14 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 </div> <!-- Weißer Hintergrund-Div -->
 
-  <div class="container achterspaltenlayout" style="padding-top: 2rem;" id="bewerbung">
+  <div class="container achterspaltenlayout" style="padding-top: 5rem;" id="bewerbung">
     {% set entry = craft.entries.section('fuerSie').slug('bewerbung').one() %}
-    <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
+    <h2 class="text-center" style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.anleser }}</div>
   </div>
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-top: 3rem;">
+      <hr style="margin-bottom: 3rem;">
       <div id="info"> {{ entry.text }} </div>
   </div>
   <img class="img-fluid" style="padding-bottom: 0;"  src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
@@ -101,14 +100,14 @@
 <div class="container-fluid no-padding" style="background-color: white; padding-top: .5rem;">
 
   <div class="container zwoelferspaltenlayout text-center" style="margin-top: 2rem;">
-    <hr style="margin-bottom: 2rem;">
-   <div id="anleser" style="padding-bottom: 3rem;"> Weitere Informationen zum Freiwilligendienst </div>
+    <hr style="margin-bottom: 3rem;">
+   <div id="anleser" style="padding-bottom: 5rem;"> Weitere Informationen zum Freiwilligendienst </div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('erfahrungsberichte').one() %}
   {% include '_layouts/weiterleitungkorrekt' %}
 
-  <div style="padding-bottom: 4rem;">  </div>
+  <div style="padding-bottom: 5rem;">  </div>
 </div>
 
 
