--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -62,18 +62,18 @@
     </div>
   </div> <!-- Zweispaltiges Layout mit allgemeinen Infos -->
 
-  <div class="container achterspaltenlayout" id="team">
+  <div class="container achterspaltenlayout" id="team" style="padding-top: 2rem;">
         {% set entry = craft.entries.section('fuerSie').slug('das-team').one() %}
         <div class="text-center">
-        <h2> {{ entry.title }} </h2>
-        <img class="img-fluid"   src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+        <h2 style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
+        <img class="img-fluid" style="padding-bottom: 1.5rem;"  src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
         </div>
         <div id="copy"> {{ entry.anleser }}    </div>
   </div> <!-- Das Team kurz erklärt -->
 
-  <div class="container achterspaltenlayout" id="arbeit">
+  <div class="container achterspaltenlayout" id="arbeit" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('fuerSie').slug('arbeit-freiwilligen').one() %}
-    <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
+    <h2 class="text-center" style="padding-bottom: 1.5rem;"> {{ entry.title }} </h2>
     <div id="copy" style="padding-bottom: 1rem;"> {{ entry.anleser}}</div>
 
     {% set entries = entry.children().all() %}
@@ -105,57 +105,57 @@
 
   </div>
 
-  <div class="container achterspaltenlayout" id="zentrum">
+  <div class="container achterspaltenlayout" id="zentrum" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('fuerSie').slug('projektzentrum').one() %}
-    <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
-    <img class="img-fluid"   src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+    <h2 class="text-center" style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
+    <img class="img-fluid" style="padding-bottom: 1rem;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
     <div id="copy"> {{ entry.anleser}}</div>
   </div>
 
-  <div class="container achterspaltenlayout" id="einsatzgebiet">
+  <div class="container achterspaltenlayout" id="einsatzgebiet" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('fuerSie').slug('einsatzgebiet').one() %}
-    <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
+    <h2 class="text-center" style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.anleser}}</div>
   </div>
 
-  <img class="img-fluid w-100" style="padding-bottom: 0;"  src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+  <img class="img-fluid w-100" style="padding-bottom: 3rem; padding-top: 3rem;"  src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
   <!-- Hintergrundbild des gesamten Teams -->
 
   <div class="container achterspaltenlayout" style="padding-top: 3rem;" id="vielfalt">
-    <div class="text-center"> <h2> {{ entry.zusatzfeld1 }} </h2> </div>
+    <h2 class="text-center" style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.text}}</div>
   </div>
 
-  <div class="container achterspaltenlayout" id="chance">
-    <div class="text-center"> <h2> {{ entry.zusatzfeld2 }} </h2> </div>
+  <div class="container achterspaltenlayout" style="padding-top: 2rem;" id="chance">
+    <h2 class="text-center" style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.zusatzfeld3}}</div>
   </div>
 
-  <div class="container achterspaltenlayout" id="arbeitsalltag">
+  <div class="container achterspaltenlayout" style="padding-top: 2rem; padding-bottom: 5rem"  id="arbeitsalltag">
     {% set entry = craft.entries.section('fuerSie').slug('arbeitsalltag-und-kosten').one() %}
-    <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
+    <h2 class="text-center" style="padding-bottom: 1rem;"> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.anleser}}</div>
   </div>
 
   <div class="container achterspaltenlayout" id="info">
-    <hr style="margin-bottom: 1rem;">
+    <hr style="margin-bottom: 2rem;">
     {{ entry.text }}
   </div>
 
-  <div class="container zwoelferspaltenlayout text-center" style="margin-top: 0;">
-    <hr style="margin-bottom: 2rem;">
-   <div id="anleser" style="padding-bottom: 3rem;"> Weitere Informationen zum Freiwilligendienst </div>
+  <div class="container zwoelferspaltenlayout text-center" style="margin-top: 0; padding-top: 3rem;">
+    <hr style="margin-bottom: 2rem; border-width: 2px">
+   <div id="anleser" style="padding-bottom: 5rem;"> Weitere Informationen zum Freiwilligendienst </div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('deine-bewerbung').one() %}
   {% include '_layouts/weiterleitungkorrekt'%}
 
-  <div style="padding-bottom: 2rem;"></div>
+  <div style="padding-bottom: 2.5rem;"></div>
 
   {% set entry = craft.entries.section('fuerSie').slug('erfahrungsberichte').one() %}
   {% include '_layouts/weiterleitungkorrekt'%}
 
-  <div style="padding-bottom: 4rem;"></div>
+  <div style="padding-bottom: 5rem;"></div>
 
 </div> <!-- Weißer Hintergrund-Div -->
 
