--- a/craft_sicherungWebsite/templates/fuerSie/daheim.html
+++ b/craft_sicherungWebsite/templates/fuerSie/daheim.html
@@ -22,17 +22,15 @@
   <div class="container achterspaltenlayout" style="position: relative;">
     {% set entry = craft.entries.section('fuerSie').slug('gerechtigkeit').one() %}
 
-    <div style="padding-bottom:30px; ">
-      <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+      <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
       <div id="anleser"> {{ entry.anleser }}  </div>
-    </div>
   </div>
 </div>
 
 
 {% set entries = entry.children().all() %}
 
-<div class="container zwoelferspaltenlayout">
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <div class="card-deck">
     <div class="row">
 
@@ -40,7 +38,7 @@
 
       {% for entry in entries %}
       {% set counter = counter + 1 %}
-      <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 50px;">
+      <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 5rem; padding-left: 5px; padding-right: 5px;">
 
         <div class="card border-light h-100">
           <img class="card-img-top"
@@ -59,18 +57,7 @@
 
 
 {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
-  <div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
-    <div class="row">
-      <div class="col-md-1">  </div>
-      <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding-bottom: 0;"> </div>
-      <div class="col-md-1">  </div>
-      <div class="col-md-7" style="padding-left: 30px;">
-        <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
-        <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
-      </div>
-    </div>
-  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
+{% include '_layouts/spendenaufrufmitherz' %}
 
 
 {% endblock %}
