--- a/craft_sicherungWebsite/templates/fuerSie/presse.html
+++ b/craft_sicherungWebsite/templates/fuerSie/presse.html
@@ -22,21 +22,19 @@
 <div class="container achterspaltenlayout" style="position: relative;">
   {% set entry = craft.entries.section('fuerSie').slug('weitere-informationen').one() %}
 
-  <div style="padding-bottom:2rem; ">
     <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
     <div id="anleser"> {{ entry.anleser }}  </div>
-    </div>
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding: 5rem 0;">
 
   <div class="container achterspaltenlayout">
     <h3>Chance-Broschüren</h3>
 
     <hr style="border-width: 2px; margin-top: 2rem; margin-bottom: 2rem;">
 
-    <h3 style="padding-bottom: 2rem;">Presseberichte</h3>
+    <h3 style="padding-bottom: 2rem; padding-top: 2rem;">Presseberichte</h3>
     {% set entries = craft.entries.section('fuerSie').slug('presseberichte').one().children().all() %}
     {% for entry in entries %}
     <div>
@@ -50,13 +48,12 @@
   </div>
 
   <div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
-    <hr style="margin-bottom: 2rem; margin-top: 2rem;">
+    <hr style="margin-bottom: 3rem; margin-top: 5rem;">
    <div id="copy" style="padding-bottom: 3rem;"> Das könnte Sie auch interessieren</div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('literaturtipps').one() %}
   {% include '_layouts/weiterleitungkorrekt' %}
-  <div style="padding-bottom: 4rem;"></div>
 
 </div>
 
