--- a/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
+++ b/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
@@ -22,41 +22,30 @@
 <div class="container achterspaltenlayout" style="position: relative;">
   {% set entry = craft.entries.section('fuerSie').slug('besuchen-vor-ort').one() %}
 
-  <div style="padding-bottom:30px; ">
-    <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+    <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
     <div id="anleser"> {{ entry.anleser }}  </div>
     </div>
-  </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
-<div class="container achterspaltenlayout">
-  <img class="img-fluid" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
-  <div class="text-center">  <div id="anleser"> {{ entry.zusatzfeld1 }}</div>   </div>
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem; padding-bottom: 5rem;">
+<div class="container achterspaltenlayout" style="padding-bottom: 5rem;">
+  <img class="img-fluid" style="padding-bottom: 5rem;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+  <div id="anleser" class="text-center" style="padding-bottom: 1rem;"> {{ entry.zusatzfeld1 }}</div>
   <div id="copy"> {{ entry.text }} </div>
 </div>
 
   <div class="container achterspaltenlayout" id="info">
+    <hr style="margin-bottom: 2rem;">
     {{ entry.zusatzfeld2 }}
   </div>
 
-  <div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
-    <hr>
-   <div id="copy" style="padding-bottom: 3rem;"> Das könnte Sie auch interessieren</div>
+  <div class="container zwoelferspaltenlayout text-center">
+    <hr style="margin-bottom: 2rem;">
+   <div id="copy" style="padding-bottom: 5rem;"> Das könnte Sie auch interessieren</div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('für-sie-daheim').one() %}
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 4rem;">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.anleser }}</div>
-    </div>
-  </div>
-</div> <!-- Weitere Informationen für sie daheim -->
+  {% include '_layouts/weiterleitungkorrekt' %}
 
 </div>
 
